--- a/src/main/chat/_msgBar.scss
+++ b/src/main/chat/_msgBar.scss
@@ -52,6 +52,7 @@
 //------------------emoji picker :shiggy:------------------//
 .autocomplete__13533 {backdrop-filter: blur(var($blur));}
 
+//hov
 .clickable__13533[aria-disabled=false]>.base__13533:hover, .clickable__13533[aria-selected=true]>.base__13533 {
     background-color: var($acc);
 }
