--- a/src/main/chat/_topBar.scss
+++ b/src/main/chat/_topBar.scss
@@ -1,10 +1,8 @@
 @use '../../var' as *;
 
-//taskbar//
-.bar_c38106 {
-    background: $main;
-}
-//-------//
+//-------------taskbar-------------//
+.bar_c38106 {background: var($main);}
+//---------------------------------//
 
 .visual-refresh .title_f75fb0 {
     border: none;
@@ -16,10 +14,3 @@
 .visual-refresh .chat_f75fb0[data-has-border=true] {border: none;}
 
 .visual-refresh .searchBar__97492 {border: none;} //search bar
-
-//--------------#channel--------------//
-.wrapper_f61d60 {
-    color: var(--FO-mentionCol);
-    background: var(--FO-mentionColBg);
-}
-//------------------------------------//
