--- a/src/main/chat/_msgBar.scss
+++ b/src/main/chat/_msgBar.scss
@@ -50,7 +50,10 @@
 .createThreadButton__841c8 {color: var($acc) !important;}
 
 //------------------emoji picker :shiggy:------------------//
-.autocomplete__13533 {backdrop-filter: blur(var($blur));}
+.autocomplete__13533 {
+    background: var($accA);
+    backdrop-filter: blur(var($blur));
+}
 
 //hov
 .clickable__13533[aria-disabled=false]>.base__13533:hover, .clickable__13533[aria-selected=true]>.base__13533 {
