MASSIVE bug fix 1

--- a/main copy.css
+++ b/main copy.css
@@ -25,22 +25,22 @@
 }
 
 /*Top Bar*/
-.visual-refresh .title_f75fb0 {border: none;}
+.visual-refresh .f75fb00fb7356cbe-title {border: none;}
 
 /*Msg Bar*/
 :where(.visual-refresh) .channelTextArea__74017 {
     border: none;
 }
 
-.actionButtons_cc1819, .button_aec7ab {
+.cc1819cb49c2d109-actionButtons, .aec7abc73c126bc0-button {
     --bg-surface-overlay: #000;
 }
 .overlay_c0bea0 {
     --bg-mod-faint: #808080;
 }
-.button__201d5 lookBlank__201d5 footerButtonColor__537ec sizeLarge__201d5 fullWidth__201d5 grow__201d5 {
+._201d5e8a3c09670a-button lookBlank__201d5 footerButtonColor__537ec sizeLarge__201d5 fullWidth__201d5 grow__201d5 {
     background:#111111;
 }
-.outer_c0bea0 theme-dark images-dark panel_c0bea0 {
+.c0bea05627c5dc35-outer theme-dark images-dark panel_c0bea0 {
     background-color: #696969;
 }
