--- a/src/main/_members.scss
+++ b/src/main/_members.scss
@@ -1,10 +1,10 @@
 @use '../var' as *;
 
-.container_c8ffbb {border: none;}
+.c8ffbb79449f399c-container {border: none;}
 
-.content_f75fb0 > div { //dm & threads
+.f75fb00fb7356cbe-content > div { //dm & threads
     border: none;
     background: var($main);
 }
 
-.members_c8ffbb {background: none;}
+.c8ffbb79449f399c-members {background: none;}
