--- a/src/main/_serverTags.scss
+++ b/src/main/_serverTags.scss
@@ -1,11 +1,11 @@
 @use '../var' as *;
 
-.container_dca174, .spinnerContainer_d3846c  {
+.dca174a2baed7ac1-container, .d3846c099147bad3-spinnerContainer  {
     border: none;
     background: var($accA);
     backdrop-filter: blur(var($blur));
 }
 
 //txt col
-.members__6e500 div,
-.established__6e500 div {color: var($txt) !important;}
+._6e5000705ad8bf77-members div,
+._6e5000705ad8bf77-established div {color: var($txt) !important;}
