--- a/src/main/_titleBar.scss
+++ b/src/main/_titleBar.scss
@@ -1,9 +1,9 @@
 @use "../var" as *;
 
-div.app_a3002d > div > div.layers__960e4.layers__160d8 > div > div > div > div.bar_c38106.theme-dark.theme-darker.images-dark {
+div.a3002d7de5be5280-app > div > div._960e4207cea8323e-layers._160d8e55254637e5-layers > div > div > div > div.c38106a3f0c3ca76-bar.theme-dark.theme-darker.images-dark {
     border: none;
     background: var($main); //dc titlebar
 }
 
 //buttons
-.visual-refresh .clickable__9293f .icon__9293f {color: var($icon);} .visual-refresh:hover .clickable__9293f:hover .icon__9293f:hover {color: var($acc);}
+.visual-refresh ._9293f6b2fc12398a-clickable ._9293f6b2fc12398a-icon {color: var($icon);} .visual-refresh:hover ._9293f6b2fc12398a-clickable:hover ._9293f6b2fc12398a-icon:hover {color: var($acc);}
