--- a/src/main/chat/_friendsList.scss
+++ b/src/main/chat/_friendsList.scss
@@ -1,16 +1,16 @@
 @use '../../var' as *;
 
 //Find or start convo
-.searchBar_e6b769 {background: var($main);}
+.e6b7699ce8339e1c-searchBar {background: var($main);}
 
 //Friends: Online All Pending
-.theme-dark .themed__9293f {background: var($main);}
+.theme-dark ._9293f6b2fc12398a-themed {background: var($main);}
 
 //Search Bar
 .wrapper_a45028 {border: none;}
 
 //Add Friend
-.tabBar__133bf .addFriend__133bf.addFriend__133bf.addFriend__133bf {background: var($acc);}
+._133bf5eea8e33a34-tabBar ._133bf5eea8e33a34-addFriend._133bf5eea8e33a34-addFriend._133bf5eea8e33a34-addFriend {background: var($acc);}
 
 //Active Now
-.scroller__7d20c, .wrapper__00943, .section__00943 {border: none;}
+._7d20cf18f8a2784c-scroller, ._00943886e1cf89d1-wrapper, ._00943886e1cf89d1-section {border: none;}
