--- a/src/main/chat/_newMsg.scss
+++ b/src/main/chat/_newMsg.scss
@@ -1,4 +1,4 @@
 @use '../../var' as *;
 
-.newMessagesBar__0f481 {color: var($txt);}
-.barBase__0f481 {border: none;}
+._0f481cbbd7530492-newMessagesBar {color: var($txt);}
+._0f481cbbd7530492-barBase {border: none;}
