--- a/src/main/chat/_reactions.scss
+++ b/src/main/chat/_reactions.scss
@@ -1,6 +1,6 @@
 @use '../../var' as *;
 
-.reaction__23977.reactionMe__23977 {
+._23977d5b7cef7361-reaction._23977d5b7cef7361-reactionMe {
     background: var($accA);
     border-color: var($acc);
 }
