--- a/src/main/chat/_serverTags.scss
+++ b/src/main/chat/_serverTags.scss
@@ -5,7 +5,7 @@
     100% {background-position: 100% 100%;}
 }
 
-.chipletContainerInner__10651, .clickable__10651:hover {
+._10651c5cfe637db6-chipletContainerInner, ._10651c5cfe637db6-clickable:hover {
     background: var($grad);
 
     background-size: 400% auto;
