--- a/src/main/chat/_hover.scss
+++ b/src/main/chat/_hover.scss
@@ -1,9 +1,9 @@
 @use '../../var' as *;
 
-.wrapper_c19a55:hover {transition: 0.25s;}
+.c19a557985eb7793-wrapper:hover {transition: 0.25s;}
 
 //---------------buttons----------------//
-.wrapper_f7ecac, .wrapper_f7ecac:hover {
+.f7ecaca5c80dbf3a-wrapper, .f7ecaca5c80dbf3a-wrapper:hover {
     border: none;
     box-shadow: none !important;
     backdrop-filter: blur(var($blur));
@@ -12,7 +12,7 @@
 //--------------------------------------//
 
 //------------reaction hover------------//
-.reactionTooltip_b49891 {
+.b49891f8a231dbff-reactionTooltip {
     background: var($accA);
     backdrop-filter: blur(var($blur));
 }
