--- a/src/main/chat/_topBar.scss
+++ b/src/main/chat/_topBar.scss
@@ -1,16 +1,16 @@
 @use '../../var' as *;
 
 //-------------taskbar-------------//
-.bar_c38106 {background: var($main);}
+.c38106a3f0c3ca76-bar {background: var($main);}
 //---------------------------------//
 
-.visual-refresh .title_f75fb0 {
+.visual-refresh .f75fb00fb7356cbe-title {
     border: none;
     background: var($main);
 }
 
-.theme-dark .children__9293f:after {background: none}
+.theme-dark ._9293f6b2fc12398a-children:after {background: none}
 
-.visual-refresh .chat_f75fb0[data-has-border=true] {border: none;}
+.visual-refresh .f75fb00fb7356cbe-chat[data-has-border=true] {border: none;}
 
-.visual-refresh .searchBar__97492 {border: none;} //search bar
+.visual-refresh ._974928fe84ca9647-searchBar {border: none;} //search bar
