--- a/src/main/leftSide/_servers.scss
+++ b/src/main/leftSide/_servers.scss
@@ -2,12 +2,12 @@
 
 //removes the most annoying square in history, the one behind profile //
 //wiget thingy--------------------------------------------------------//
-.visual-refresh .wrapper_ef3116 {
+.visual-refresh .ef3116c2da186559-wrapper {
     background: var($main); //bg
     margin-bottom: unset; 
 }
 
-.stack_dbd263.scroller_ef3116.none_d125d2.scrollerBase_d125d2:after {
+.dbd2630aec71879b-stack.ef3116c2da186559-scroller.d125d22cdfd32cfe-none.d125d22cdfd32cfe-scrollerBase:after {
     color: transparent;
     background: none;
     white-space: pre-wrap;
@@ -17,20 +17,20 @@
 //--------------------------------------------------------------------//
 
 //dc logo btn
-.wrapper__6e9f8.selected__6e9f8 .childWrapper__6e9f8 {background: var($acc);}
+._6e9f8dce4cc18de3-wrapper._6e9f8dce4cc18de3-selected ._6e9f8dce4cc18de3-childWrapper {background: var($acc);}
 
 //folders
-.folderGroupBackground__48112 {border: none;}
+._48112cbe77dc5022-folderGroupBackground {border: none;}
 
 //unread server dot
-.item__58105 {background: var($acc);}
+._581051df43c5ebb6-item {background: var($acc);}
 
 //----------------------------------server discover buttons-----------------------------------//
-.circleIconButton__5bc7e.selected__5bc7e, .circleIconButton__5bc7e:hover:not(.disabled__5bc7e) {
+._5bc7ed9d4097f6b5-circleIconButton._5bc7ed9d4097f6b5-selected, ._5bc7ed9d4097f6b5-circleIconButton:hover:not(.disabled__5bc7e) {
     background: var($acc);
 }
 
-.circleIconButton__5bc7e, .circleIconButton__5bc7e.selected__5bc7e {
+._5bc7ed9d4097f6b5-circleIconButton, ._5bc7ed9d4097f6b5-circleIconButton._5bc7ed9d4097f6b5-selected {
     color: var($icon);
     background: var($sec);
 }
