Update Settings menu

--- a/src/import.scss
+++ b/src/import.scss
@@ -30,4 +30,4 @@
 @use 'main/leftSide/dm' as *;
 @use 'main/leftSide/servers' as *;
 
-//@use 'main/settings/settings' as *;
+@use 'main/settings/settings' as *;
