--- a/src/main/_root.scss
+++ b/src/main/_root.scss
@@ -25,7 +25,7 @@
     
     --chat-background-default: var(--FO-msgBar) !important;
 
-    --mention-background: var(color-mix(in oklch, var(--FO-mentionCol) 20%, transparent)) !important;
+    --mention-background: color-mix(in oklch, var(--FO-mentionCol) 20%, transparent) !important;
     --mention-foreground: var(--FO-mentionCol);
     --background-mentioned: var(--FO-accentB);
     --background-message-hover: var(--FO-secCol);
