Add _root (again) and add accC

--- a/src/_var.scss
+++ b/src/_var.scss
@@ -5,6 +5,7 @@ $msgBar: --FO-msgBar;
 
 $accB: --FO-accentB;
 $accA: --FO-accentA;
+$accC: --FO-accentC;
 
 $grad: --FO-grad;
 $grad1: --FO-gradCol1;
