--- a/src/main/_root.scss
+++ b/src/main/_root.scss
@@ -42,6 +42,7 @@
     
     --FO-accentA: color-mix(in oklch, var(--FO-accentCol), transparent 70%);
     --FO-accentB: color-mix(in oklch, var(--FO-accentCol), transparent 85%);
+    --FO-accentC: color-mix(in oklch, var(--FO-accentCol), black 25%);
 
     --FO-mentionColBg: color-mix(in oklch, var(--FO-mentionCol), transparent 85%);
 
