$var not converting when in --var?? Fix BD CSS Editor live button

--- a/src/_bd.scss
+++ b/src/_bd.scss
@@ -16,8 +16,8 @@
 }
 
 //Live Update
-.bd-switch input:checked+.bd-switch-body {
-	--switch-color: var($acc);
+.bd-switch input:checked + .bd-switch-body {
+	--switch-color: var(--FO-accentCol);
 }
 
 //-------------------suggestion menu-------------------//
