--- a/src/main/_root.scss
+++ b/src/main/_root.scss
@@ -3,7 +3,7 @@
 
 ::selection {
     background: var(--FO-accentCol);
-    color: var(--FO-textCol) !important;
+    color: var(--FO-mainCol) !important;
 }
 
 :root {
