Add Profile Widgets

--- a/src/import.scss
+++ b/src/import.scss
@@ -4,7 +4,7 @@
 @use 'main/members' as *;
 @use 'main/popups' as *;
 @use 'main/profiles' as *;
-@use 'main/profileWiget' as *;
+@use 'main/profileWidget' as *;
 @use 'main/root' as *;
 @use 'main/serverTags' as *;
 @use 'main/titleBar' as *;
