--- a/src/main/settings/_settings.scss
+++ b/src/main/settings/_settings.scss
@@ -2,6 +2,7 @@
 
 //--------------main bg--------------//
 ._8a031a135bfcb9ba-container {
+	border: none;
 	background: var($accA);
 	backdrop-filter: blur(var($blur));
 }
