--- a/src/import.scss
+++ b/src/import.scss
@@ -1,6 +1,7 @@
 @use 'main/root' as *;
 
 @use 'main/imageView' as *;
+@use 'main/inbox' as *;
 @use 'main/members' as *;
 @use 'main/popups' as *;
 @use 'main/profiles' as *;
