--- a/src/main/_profiles.scss
+++ b/src/main/_profiles.scss
@@ -12,6 +12,10 @@
     background: none;
 }
 
+.ab86098b36386ff7-container { //status
+	--custom-status-bubble-background: var($accC);
+}
+
 ._201d5e8a3c09670a-lookFilled._201d5e8a3c09670a-colorBrand { //add friend
     border: none;
     color: var($txt);
