Fix status again

--- a/src/main/_profiles.scss
+++ b/src/main/_profiles.scss
@@ -13,7 +13,7 @@
 }
 
 .ab86098b36386ff7-container { //status
-	--custom-status-bubble-background: var($accC);
+	--custom-status-bubble-background: var(--FO-accentC);
 }
 
 ._201d5e8a3c09670a-lookFilled._201d5e8a3c09670a-colorBrand { //add friend
