Fix Status (again) hover

--- a/src/main/_profiles.scss
+++ b/src/main/_profiles.scss
@@ -12,7 +12,8 @@
     background: none;
 }
 
-.ab86098b36386ff7-container { //status
+.ab86098b36386ff7-container,
+.ab86098b36386ff7-container:hover { //status
 	--custom-status-bubble-background: var(--FO-accentC);
 }
 
