Fix BD Custom CSS Editor

--- a/src/import.scss
+++ b/src/import.scss
@@ -32,7 +32,8 @@
 @use 'main/leftSide/dm' as *;
 @use 'main/leftSide/servers' as *;
 
+@use 'main/settings/bd' as *;
 @use 'main/settings/settings' as *;
 @use 'main/settings/user' as *;
 
-@use 'main/settings/bd' as *;
+@use 'bd' as *;
