--- a/src/import.scss
+++ b/src/import.scss
@@ -7,6 +7,7 @@
 @use 'main/profiles' as *;
 @use 'main/profileWidget' as *;
 @use 'main/root' as *;
+@use 'main/searchMenu' as *;
 @use 'main/serverTags' as *;
 @use 'main/titleBar' as *;
 @use 'main/tooltips' as *;
