Fix guild settings

--- a/src/import.scss
+++ b/src/import.scss
@@ -34,6 +34,7 @@
 @use 'main/leftSide/servers' as *;
 
 @use 'main/settings/bd' as *;
+@use 'main/settings/guild' as *;
 @use 'main/settings/settings' as *;
 @use 'main/settings/user' as *;
 
